Implementacion de Log y ajustes